--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,7 +1,7 @@
 body {
-     font-family: "roboto" sans-serif;
-     color: #434455;
-     background-color: #fff;
+    font-family: "Roboto", sans-serif;
+    background-color: white;
+    color: #434455;
 }
 
 a {
