--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -67,17 +67,18 @@ ul, ol {
 }
 
 .hero-order {
-    background-color: #4D5AE5
-}
-
-.hero-order-title {
-    font-family: "Raleway", sans-serif;
+    background-color: #4D5AE5;
+        font-family: "Raleway", sans-serif;
         font-weight: 500;
         font-size: 16px;
         line-height: 1.5;
         letter-spacing: 0.04em;
         color: #fff;
         cursor: pointer
+}
+
+.hero-order-title {
+
     }
 
 .hero-order {
